src/parser/CmmParser.java
// Generated from src/parser/Cmm.g4 by ANTLR 4.7
package parser;

	import parser.*;
	
	import syntax.*;
	import syntax.expressions.*;
	import syntax.expressions.binary.*;
	import syntax.statements.*;
	import syntax.types.*;
	
	import java.util.*;

import org.antlr.v4.runtime.atn.*;
import org.antlr.v4.runtime.dfa.DFA;
import org.antlr.v4.runtime.*;
import org.antlr.v4.runtime.misc.*;
import org.antlr.v4.runtime.tree.*;
import java.util.List;
import java.util.Iterator;
import java.util.ArrayList;

@SuppressWarnings({"all", "warnings", "unchecked", "unused", "cast"})
public class CmmParser extends Parser {
	static { RuntimeMetaData.checkVersion("4.7", RuntimeMetaData.VERSION); }

	protected static final DFA[] _decisionToDFA;
	protected static final PredictionContextCache _sharedContextCache =
		new PredictionContextCache();
	public static final int
		T__0=1, T__1=2, T__2=3, T__3=4, T__4=5, T__5=6, T__6=7, T__7=8, T__8=9, 
		T__9=10, T__10=11, T__11=12, T__12=13, T__13=14, T__14=15, T__15=16, T__16=17, 
		T__17=18, T__18=19, T__19=20, T__20=21, T__21=22, T__22=23, T__23=24, 
		T__24=25, T__25=26, T__26=27, T__27=28, T__28=29, T__29=30, T__30=31, 
		T__31=32, T__32=33, T__33=34, T__34=35, T__35=36, ID=37, INT_CONSTANT=38, 
		REAL_CONSTANT=39, CHAR_CONSTANT=40, SL_COMMENT=41, ML_COMMENT=42, BLANKS=43;
	public static final int
		RULE_program = 0, RULE_main = 1, RULE_type = 2, RULE_structType = 3, RULE_primitive = 4, 
		RULE_voidType = 5, RULE_funcReturnType = 6, RULE_definition = 7, RULE_variableDef = 8, 
		RULE_fuctionDef = 9, RULE_params = 10, RULE_funcInvocation = 11, RULE_block = 12, 
		RULE_fnBlock = 13, RULE_statement = 14, RULE_readWrite = 15, RULE_variable = 16, 
		RULE_expression = 17;
	public static final String[] ruleNames = {
		"program", "main", "type", "structType", "primitive", "voidType", "funcReturnType", 
		"definition", "variableDef", "fuctionDef", "params", "funcInvocation", 
		"block", "fnBlock", "statement", "readWrite", "variable", "expression"
	};

	private static final String[] _LITERAL_NAMES = {
		null, "'main'", "'('", "')'", "'['", "']'", "'struct'", "'{'", "'}'", 
		"'int'", "'char'", "'double'", "'void'", "','", "';'", "'while'", "'if'", 
		"'else'", "'='", "'return'", "'write'", "'read'", "'.'", "'-'", "'!'", 
		"'*'", "'/'", "'%'", "'+'", "'>'", "'<'", "'>='", "'<='", "'=='", "'!='", 
		"'&&'", "'||'"
	};
	private static final String[] _SYMBOLIC_NAMES = {
		null, null, null, null, null, null, null, null, null, null, null, null, 
		null, null, null, null, null, null, null, null, null, null, null, null, 
		null, null, null, null, null, null, null, null, null, null, null, null, 
		null, "ID", "INT_CONSTANT", "REAL_CONSTANT", "CHAR_CONSTANT", "SL_COMMENT", 
		"ML_COMMENT", "BLANKS"
	};
	public static final Vocabulary VOCABULARY = new VocabularyImpl(_LITERAL_NAMES, _SYMBOLIC_NAMES);

	/**
	 * @deprecated Use {@link #VOCABULARY} instead.
	 */
	@Deprecated
	public static final String[] tokenNames;
	static {
		tokenNames = new String[_SYMBOLIC_NAMES.length];
		for (int i = 0; i < tokenNames.length; i++) {
			tokenNames[i] = VOCABULARY.getLiteralName(i);
			if (tokenNames[i] == null) {
				tokenNames[i] = VOCABULARY.getSymbolicName(i);
			}

			if (tokenNames[i] == null) {
				tokenNames[i] = "<INVALID>";
			}
		}
	}

	@Override
	@Deprecated
	public String[] getTokenNames() {
		return tokenNames;
	}

	@Override

	public Vocabulary getVocabulary() {
		return VOCABULARY;
	}

	@Override
	public String getGrammarFileName() { return "Cmm.g4"; }

	@Override
	public String[] getRuleNames() { return ruleNames; }

	@Override
	public String getSerializedATN() { return _serializedATN; }

	@Override
	public ATN getATN() { return _ATN; }

	public CmmParser(TokenStream input) {
		super(input);
		_interp = new ParserATNSimulator(this,_ATN,_decisionToDFA,_sharedContextCache);
	}
	public static class ProgramContext extends ParserRuleContext {
		public Program ast;
		public List<Definition> def = new ArrayList<Definition>();
		public DefinitionContext d;
		public MainContext main;
		public MainContext main() {
			return getRuleContext(MainContext.class,0);
		}
		public TerminalNode EOF() { return getToken(CmmParser.EOF, 0); }
		public List<DefinitionContext> definition() {
			return getRuleContexts(DefinitionContext.class);
		}
		public DefinitionContext definition(int i) {
			return getRuleContext(DefinitionContext.class,i);
		}
		public ProgramContext(ParserRuleContext parent, int invokingState) {
			super(parent, invokingState);
		}
		@Override public int getRuleIndex() { return RULE_program; }
	}

	public final ProgramContext program() throws RecognitionException {
		ProgramContext _localctx = new ProgramContext(_ctx, getState());
		enterRule(_localctx, 0, RULE_program);
		try {
			int _alt;
			enterOuterAlt(_localctx, 1);
			{
			setState(41);
			_errHandler.sync(this);
			_alt = getInterpreter().adaptivePredict(_input,0,_ctx);
			while ( _alt!=2 && _alt!=org.antlr.v4.runtime.atn.ATN.INVALID_ALT_NUMBER ) {
				if ( _alt==1 ) {
					{
					{
					setState(36);
					((ProgramContext)_localctx).d = definition();
					 _localctx.def.addAll(((ProgramContext)_localctx).d.ast); 
					}
					} 
				}
				setState(43);
				_errHandler.sync(this);
				_alt = getInterpreter().adaptivePredict(_input,0,_ctx);
			}
			setState(44);
			((ProgramContext)_localctx).main = main();
			 _localctx.def.add(((ProgramContext)_localctx).main.ast); 
			setState(46);
			match(EOF);
			 ((ProgramContext)_localctx).ast =  new Program(0, 0, _localctx.def); 
			}
		}
		catch (RecognitionException re) {
			_localctx.exception = re;
			_errHandler.reportError(this, re);
			_errHandler.recover(this, re);
		}
		finally {
			exitRule();
		}
		return _localctx;
	}

	public static class MainContext extends ParserRuleContext {
		public FunctionDefinition ast;
		public FunctionType fType;
		public VoidTypeContext v;
		public FnBlockContext fnBlock;
		public FnBlockContext fnBlock() {
			return getRuleContext(FnBlockContext.class,0);
		}
		public VoidTypeContext voidType() {
			return getRuleContext(VoidTypeContext.class,0);
		}
		public MainContext(ParserRuleContext parent, int invokingState) {
			super(parent, invokingState);
		}
		@Override public int getRuleIndex() { return RULE_main; }
	}

	public final MainContext main() throws RecognitionException {
		MainContext _localctx = new MainContext(_ctx, getState());
		enterRule(_localctx, 2, RULE_main);
		try {
			enterOuterAlt(_localctx, 1);
			{
			setState(49);
			((MainContext)_localctx).v = voidType();
			setState(50);
			match(T__0);
			setState(51);
			match(T__1);
			setState(52);
			match(T__2);
			setState(53);
			((MainContext)_localctx).fnBlock = fnBlock();
			 ((MainContext)_localctx).ast =  new FunctionDefinition(((MainContext)_localctx).v.ast.getLine(), ((MainContext)_localctx).v.ast.getColumn(), "main", new FunctionType(((MainContext)_localctx).v.ast), ((MainContext)_localctx).fnBlock.ast); 
			}
		}
		catch (RecognitionException re) {
			_localctx.exception = re;
			_errHandler.reportError(this, re);
			_errHandler.recover(this, re);
		}
		finally {
			exitRule();
		}
		return _localctx;
	}

	public static class TypeContext extends ParserRuleContext {
		public Type ast;
		public TypeContext t;
		public PrimitiveContext primitive;
		public StructTypeContext structType;
		public Token i;
		public Token i2;
		public PrimitiveContext primitive() {
			return getRuleContext(PrimitiveContext.class,0);
		}
		public StructTypeContext structType() {
			return getRuleContext(StructTypeContext.class,0);
		}
		public TypeContext type() {
			return getRuleContext(TypeContext.class,0);
		}
		public List<TerminalNode> INT_CONSTANT() { return getTokens(CmmParser.INT_CONSTANT); }
		public TerminalNode INT_CONSTANT(int i) {
			return getToken(CmmParser.INT_CONSTANT, i);
		}
		public TypeContext(ParserRuleContext parent, int invokingState) {
			super(parent, invokingState);
		}
		@Override public int getRuleIndex() { return RULE_type; }
	}

	public final TypeContext type() throws RecognitionException {
		return type(0);
	}

	private TypeContext type(int _p) throws RecognitionException {
		ParserRuleContext _parentctx = _ctx;
		int _parentState = getState();
		TypeContext _localctx = new TypeContext(_ctx, _parentState);
		TypeContext _prevctx = _localctx;
		int _startState = 4;
		enterRecursionRule(_localctx, 4, RULE_type, _p);
		try {
			int _alt;
			enterOuterAlt(_localctx, 1);
			{
			setState(63);
			_errHandler.sync(this);
			switch (_input.LA(1)) {
			case T__8:
			case T__9:
			case T__10:
				{
				setState(57);
				((TypeContext)_localctx).primitive = primitive();
				 ((TypeContext)_localctx).ast =  ((TypeContext)_localctx).primitive.ast; 
				}
				break;
			case T__5:
				{
				setState(60);
				((TypeContext)_localctx).structType = structType();
				 ((TypeContext)_localctx).ast =  ((TypeContext)_localctx).structType.ast; 
				}
				break;
			default:
				throw new NoViableAltException(this);
			}
			_ctx.stop = _input.LT(-1);
			setState(81);
			_errHandler.sync(this);
			_alt = getInterpreter().adaptivePredict(_input,3,_ctx);
			while ( _alt!=2 && _alt!=org.antlr.v4.runtime.atn.ATN.INVALID_ALT_NUMBER ) {
				if ( _alt==1 ) {
					if ( _parseListeners!=null ) triggerExitRuleEvent();
					_prevctx = _localctx;
					{
					{
					_localctx = new TypeContext(_parentctx, _parentState);
					_localctx.t = _prevctx;
					_localctx.t = _prevctx;
					pushNewRecursionContext(_localctx, _startState, RULE_type);
					setState(65);
					if (!(precpred(_ctx, 2))) throw new FailedPredicateException(this, "precpred(_ctx, 2)");
					setState(66);
					match(T__3);
					setState(67);
					((TypeContext)_localctx).i = match(INT_CONSTANT);
					setState(68);
					match(T__4);
					 ((TypeContext)_localctx).ast =  ArrayType.buildArray(Integer.parseInt((((TypeContext)_localctx).i!=null?((TypeContext)_localctx).i.getText():null)), ((TypeContext)_localctx).t.ast); 
					setState(76);
					_errHandler.sync(this);
					_alt = getInterpreter().adaptivePredict(_input,2,_ctx);
					while ( _alt!=2 && _alt!=org.antlr.v4.runtime.atn.ATN.INVALID_ALT_NUMBER ) {
						if ( _alt==1 ) {
							{
							{
							setState(70);
							match(T__3);
							setState(71);
							((TypeContext)_localctx).i2 = match(INT_CONSTANT);
							setState(72);
							match(T__4);
							 ((TypeContext)_localctx).ast =  ArrayType.buildArray( Integer.parseInt((((TypeContext)_localctx).i2!=null?((TypeContext)_localctx).i2.getText():null)), _localctx.ast); 
							}
							} 
						}
						setState(78);
						_errHandler.sync(this);
						_alt = getInterpreter().adaptivePredict(_input,2,_ctx);
					}
					}
					} 
				}
				setState(83);
				_errHandler.sync(this);
				_alt = getInterpreter().adaptivePredict(_input,3,_ctx);
			}
			}
		}
		catch (RecognitionException re) {
			_localctx.exception = re;
			_errHandler.reportError(this, re);
			_errHandler.recover(this, re);
		}
		finally {
			unrollRecursionContexts(_parentctx);
		}
		return _localctx;
	}

	public static class StructTypeContext extends ParserRuleContext {
		public StructType ast;
		public List<VariableDefinition> defs = new ArrayList<VariableDefinition>();
		public Token s;
		public VariableDefContext variableDef;
		public List<VariableDefContext> variableDef() {
			return getRuleContexts(VariableDefContext.class);
		}
		public VariableDefContext variableDef(int i) {
			return getRuleContext(VariableDefContext.class,i);
		}
		public StructTypeContext(ParserRuleContext parent, int invokingState) {
			super(parent, invokingState);
		}
		@Override public int getRuleIndex() { return RULE_structType; }
	}

	public final StructTypeContext structType() throws RecognitionException {
		StructTypeContext _localctx = new StructTypeContext(_ctx, getState());
		enterRule(_localctx, 6, RULE_structType);
		int _la;
		try {
			enterOuterAlt(_localctx, 1);
			{
			setState(84);
			((StructTypeContext)_localctx).s = match(T__5);
			setState(85);
			match(T__6);
			setState(91);
			_errHandler.sync(this);
			_la = _input.LA(1);
			while ((((_la) & ~0x3f) == 0 && ((1L << _la) & ((1L << T__5) | (1L << T__8) | (1L << T__9) | (1L << T__10))) != 0)) {
				{
				{
				setState(86);
				((StructTypeContext)_localctx).variableDef = variableDef();
				 _localctx.defs.addAll(((StructTypeContext)_localctx).variableDef.ast); 
				}
				}
				setState(93);
				_errHandler.sync(this);
				_la = _input.LA(1);
			}
			setState(94);
			match(T__7);
			 ((StructTypeContext)_localctx).ast =  new StructType(((StructTypeContext)_localctx).s.getLine(), ((StructTypeContext)_localctx).s.getCharPositionInLine()+1, _localctx.defs); 
			}
		}
		catch (RecognitionException re) {
			_localctx.exception = re;
			_errHandler.reportError(this, re);
			_errHandler.recover(this, re);
		}
		finally {
			exitRule();
		}
		return _localctx;
	}

	public static class PrimitiveContext extends ParserRuleContext {
		public Type ast;
		public Token i;
		public Token c;
		public Token d;
		public PrimitiveContext(ParserRuleContext parent, int invokingState) {
			super(parent, invokingState);
		}
		@Override public int getRuleIndex() { return RULE_primitive; }
	}

	public final PrimitiveContext primitive() throws RecognitionException {
		PrimitiveContext _localctx = new PrimitiveContext(_ctx, getState());
		enterRule(_localctx, 8, RULE_primitive);
		try {
			setState(103);
			_errHandler.sync(this);
			switch (_input.LA(1)) {
			case T__8:
				enterOuterAlt(_localctx, 1);
				{
				setState(97);
				((PrimitiveContext)_localctx).i = match(T__8);
				 ((PrimitiveContext)_localctx).ast =  new IntType(((PrimitiveContext)_localctx).i.getLine(), ((PrimitiveContext)_localctx).i.getCharPositionInLine()+1); 
				}
				break;
			case T__9:
				enterOuterAlt(_localctx, 2);
				{
				setState(99);
				((PrimitiveContext)_localctx).c = match(T__9);
				 ((PrimitiveContext)_localctx).ast =  new CharType(((PrimitiveContext)_localctx).c.getLine(), ((PrimitiveContext)_localctx).c.getCharPositionInLine()+1); 
				}
				break;
			case T__10:
				enterOuterAlt(_localctx, 3);
				{
				setState(101);
				((PrimitiveContext)_localctx).d = match(T__10);
				 ((PrimitiveContext)_localctx).ast =  new DoubleType(((PrimitiveContext)_localctx).d.getLine(), ((PrimitiveContext)_localctx).d.getCharPositionInLine()+1); 
				}
				break;
			default:
				throw new NoViableAltException(this);
			}
		}
		catch (RecognitionException re) {
			_localctx.exception = re;
			_errHandler.reportError(this, re);
			_errHandler.recover(this, re);
		}
		finally {
			exitRule();
		}
		return _localctx;
	}

	public static class VoidTypeContext extends ParserRuleContext {
		public Type ast;
		public Token v;
		public VoidTypeContext(ParserRuleContext parent, int invokingState) {
			super(parent, invokingState);
		}
		@Override public int getRuleIndex() { return RULE_voidType; }
	}

	public final VoidTypeContext voidType() throws RecognitionException {
		VoidTypeContext _localctx = new VoidTypeContext(_ctx, getState());
		enterRule(_localctx, 10, RULE_voidType);
		try {
			enterOuterAlt(_localctx, 1);
			{
			setState(105);
			((VoidTypeContext)_localctx).v = match(T__11);
			 ((VoidTypeContext)_localctx).ast =  new VoidType(((VoidTypeContext)_localctx).v.getLine(), ((VoidTypeContext)_localctx).v.getCharPositionInLine()+1); 
			}
		}
		catch (RecognitionException re) {
			_localctx.exception = re;
			_errHandler.reportError(this, re);
			_errHandler.recover(this, re);
		}
		finally {
			exitRule();
		}
		return _localctx;
	}

	public static class FuncReturnTypeContext extends ParserRuleContext {
		public Type ast;
		public PrimitiveContext primitive;
		public VoidTypeContext voidType;
		public PrimitiveContext primitive() {
			return getRuleContext(PrimitiveContext.class,0);
		}
		public VoidTypeContext voidType() {
			return getRuleContext(VoidTypeContext.class,0);
		}
		public FuncReturnTypeContext(ParserRuleContext parent, int invokingState) {
			super(parent, invokingState);
		}
		@Override public int getRuleIndex() { return RULE_funcReturnType; }
	}

	public final FuncReturnTypeContext funcReturnType() throws RecognitionException {
		FuncReturnTypeContext _localctx = new FuncReturnTypeContext(_ctx, getState());
		enterRule(_localctx, 12, RULE_funcReturnType);
		try {
			setState(114);
			_errHandler.sync(this);
			switch (_input.LA(1)) {
			case T__8:
			case T__9:
			case T__10:
				enterOuterAlt(_localctx, 1);
				{
				setState(108);
				((FuncReturnTypeContext)_localctx).primitive = primitive();
				((FuncReturnTypeContext)_localctx).ast =  ((FuncReturnTypeContext)_localctx).primitive.ast; 
				}
				break;
			case T__11:
				enterOuterAlt(_localctx, 2);
				{
				setState(111);
				((FuncReturnTypeContext)_localctx).voidType = voidType();
				((FuncReturnTypeContext)_localctx).ast =  ((FuncReturnTypeContext)_localctx).voidType.ast; 
				}
				break;
			default:
				throw new NoViableAltException(this);
			}
		}
		catch (RecognitionException re) {
			_localctx.exception = re;
			_errHandler.reportError(this, re);
			_errHandler.recover(this, re);
		}
		finally {
			exitRule();
		}
		return _localctx;
	}

	public static class DefinitionContext extends ParserRuleContext {
		public List<Definition> ast = new ArrayList<Definition>();
		public FuctionDefContext fuctionDef;
		public VariableDefContext variableDef;
		public FuctionDefContext fuctionDef() {
			return getRuleContext(FuctionDefContext.class,0);
		}
		public VariableDefContext variableDef() {
			return getRuleContext(VariableDefContext.class,0);
		}
		public DefinitionContext(ParserRuleContext parent, int invokingState) {
			super(parent, invokingState);
		}
		@Override public int getRuleIndex() { return RULE_definition; }
	}

	public final DefinitionContext definition() throws RecognitionException {
		DefinitionContext _localctx = new DefinitionContext(_ctx, getState());
		enterRule(_localctx, 14, RULE_definition);
		try {
			setState(122);
			_errHandler.sync(this);
			switch ( getInterpreter().adaptivePredict(_input,7,_ctx) ) {
			case 1:
				enterOuterAlt(_localctx, 1);
				{
				setState(116);
				((DefinitionContext)_localctx).fuctionDef = fuctionDef();
				 _localctx.ast.add(((DefinitionContext)_localctx).fuctionDef.ast); 
				}
				break;
			case 2:
				enterOuterAlt(_localctx, 2);
				{
				setState(119);
				((DefinitionContext)_localctx).variableDef = variableDef();
				 _localctx.ast.addAll(((DefinitionContext)_localctx).variableDef.ast); 
				}
				break;
			}
		}
		catch (RecognitionException re) {
			_localctx.exception = re;
			_errHandler.reportError(this, re);
			_errHandler.recover(this, re);
		}
		finally {
			exitRule();
		}
		return _localctx;
	}

	public static class VariableDefContext extends ParserRuleContext {
		public List<VariableDefinition> ast = new ArrayList<VariableDefinition>();
		public TypeContext t;
		public TypeContext type;
		public Token id1;
		public Token id2;
		public TypeContext type() {
			return getRuleContext(TypeContext.class,0);
		}
		public List<TerminalNode> ID() { return getTokens(CmmParser.ID); }
		public TerminalNode ID(int i) {
			return getToken(CmmParser.ID, i);
		}
		public VariableDefContext(ParserRuleContext parent, int invokingState) {
			super(parent, invokingState);
		}
		@Override public int getRuleIndex() { return RULE_variableDef; }
	}

	public final VariableDefContext variableDef() throws RecognitionException {
		VariableDefContext _localctx = new VariableDefContext(_ctx, getState());
		enterRule(_localctx, 16, RULE_variableDef);
		int _la;
		try {
			enterOuterAlt(_localctx, 1);
			{
			setState(124);
			((VariableDefContext)_localctx).t = ((VariableDefContext)_localctx).type = type(0);
			setState(125);
			((VariableDefContext)_localctx).id1 = match(ID);
			_localctx.ast.add(new VariableDefinition(((VariableDefContext)_localctx).t.ast.getLine(), ((VariableDefContext)_localctx).t.ast.getColumn(), (((VariableDefContext)_localctx).id1!=null?((VariableDefContext)_localctx).id1.getText():null), ((VariableDefContext)_localctx).type.ast));
			setState(132);
			_errHandler.sync(this);
			_la = _input.LA(1);
			while (_la==T__12) {
				{
				{
				setState(127);
				match(T__12);
				setState(128);
				((VariableDefContext)_localctx).id2 = match(ID);
				_localctx.ast.add(new VariableDefinition(((VariableDefContext)_localctx).t.ast.getLine(), ((VariableDefContext)_localctx).t.ast.getColumn(), (((VariableDefContext)_localctx).id2!=null?((VariableDefContext)_localctx).id2.getText():null), ((VariableDefContext)_localctx).type.ast));
				}
				}
				setState(134);
				_errHandler.sync(this);
				_la = _input.LA(1);
			}
			setState(135);
			match(T__13);
			}
		}
		catch (RecognitionException re) {
			_localctx.exception = re;
			_errHandler.reportError(this, re);
			_errHandler.recover(this, re);
		}
		finally {
			exitRule();
		}
		return _localctx;
	}

	public static class FuctionDefContext extends ParserRuleContext {
		public FunctionDefinition ast;
		public List<VariableDefinition> p = new ArrayList<VariableDefinition>();
		public FuncReturnTypeContext t;
		public Token ID;
		public ParamsContext params;
		public FnBlockContext fnBlock;
		public TerminalNode ID() { return getToken(CmmParser.ID, 0); }
		public FnBlockContext fnBlock() {
			return getRuleContext(FnBlockContext.class,0);
		}
		public FuncReturnTypeContext funcReturnType() {
			return getRuleContext(FuncReturnTypeContext.class,0);
		}
		public ParamsContext params() {
			return getRuleContext(ParamsContext.class,0);
		}
		public FuctionDefContext(ParserRuleContext parent, int invokingState) {
			super(parent, invokingState);
		}
		@Override public int getRuleIndex() { return RULE_fuctionDef; }
	}

	public final FuctionDefContext fuctionDef() throws RecognitionException {
		FuctionDefContext _localctx = new FuctionDefContext(_ctx, getState());
		enterRule(_localctx, 18, RULE_fuctionDef);
		int _la;
		try {
			enterOuterAlt(_localctx, 1);
			{
			setState(137);
			((FuctionDefContext)_localctx).t = funcReturnType();
			setState(138);
			((FuctionDefContext)_localctx).ID = match(ID);
			setState(139);
			match(T__1);
			setState(143);
			_errHandler.sync(this);
			_la = _input.LA(1);
			if ((((_la) & ~0x3f) == 0 && ((1L << _la) & ((1L << T__8) | (1L << T__9) | (1L << T__10))) != 0)) {
				{
				setState(140);
				((FuctionDefContext)_localctx).params = params();
				 _localctx.p.addAll(((FuctionDefContext)_localctx).params.ast); 
				}
			}
